--- a/clients/src/Styles/App.css
+++ b/clients/src/Styles/App.css
@@ -1,82 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300;400;600;700&display=swap');
-
-* {
-  font-family: 'Signika Negative', sans-serif;
-  box-sizing: border-box;
-}
-
-.studyBuddy {
-  font-size: 60px;
-  font-weight: 700;
-  color: #4B23BF;
-  margin-left: 30px;
-  margin-top: 15px;
-}
-
-.chats {
-  font-size: 40px;
-  font-weight: 600;
-  margin-top: 30px;
-  margin-right: 20px;
-  text-align: right !important;
-}
-
-.select {
-  margin-left: 10px;
-}
-
-.card {
-  border-top: 3px solid #4B23BF !important;
-  border-radius: 0 !important;
-  margin: .5rem;
-}
-
-.card:hover {
-  background: #e1e1e1;
-  border: 1px solid #d0d0d0;
-}
-
-.students {
-  font-size: 30px;
-  margin-left: 20px;
-  font-weight: 600;
-}
-
-.chatInstructions {
-  font-size: 15px;
-  margin-left: 20px;
-  font-weight: 500;
-}
-
-.studentName {
-  font-size: 30px;
-  font-weight: 600;
-}
-
-@media (max-width: 920px) {
-  .studyBuddy {
-    font-size: 40px;
-  }
-  
-  .chats {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 650px) {
-  .studyBuddy {
-    font-size: 30px;
-    margin-left: 15px;
-  }
-
-  .students {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 520px) {
-  .studyBuddy {
-    font-size: 20px;
-    margin-left: 10px;
-  }
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
